chore: Standardize project language to English